# django_base

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env_template.txt  keygen.py  pyproject.toml
config/nginx/: django.conf  django_2.conf
django_base/core/: urls.py  views.py
django_base/core/templates/core/: base.html
django_base/django_base/: asgi.py  settings.py  urls.py  wsgi.py
django_base/static/styles/: main.css  main.css.map
django_base/users/: admin.py  models.py
django_base/users/migrations/: 0001_initial.py
